config/default/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    control-plane: controller-manager
    app.kubernetes.io/name: unstructured-data-controller
    app.kubernetes.io/managed-by: kustomize
  name: controller-manager-service
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: unstructured-data-controller
