config/default/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    component: route
    control-plane: controller-manager
    app.kubernetes.io/name: unstructured-data-controller
    app.kubernetes.io/managed-by: kustomize
    shard: internal
  name: udc-health
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: controller-manager-service
